Move BITWEB blockchain params to latest Bitcoin Code base.
Move BITWEB blockchain params to latest Bitcoin Code base.
Fix Max supply to 84 000 000 minable coins and halving perion to 840 000
by rule 84 000 000/34 expected halving periods + 2580000 and - 50 ( by reason as 1 block used for premine ) so correct Max Supply be 86579950 , and correct minable coins 84 000 000 - 50.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -136,6 +136,7 @@ BITCOIN_CORE_H = \
   dbwrapper.h \
   flatfile.h \
   fs.h \
+  hashdb.h \
   httprpc.h \
   httpserver.h \
   index/base.h \
@@ -290,6 +291,7 @@ libbitcoin_server_a_SOURCES = \
   blockfilter.cpp \
   chain.cpp \
   consensus/tx_verify.cpp \
+  hashdb.cpp \
   dbwrapper.cpp \
   flatfile.cpp \
   httprpc.cpp \
@@ -417,7 +419,10 @@ crypto_libbitcoin_crypto_base_a_SOURCES = \
   crypto/sha512.cpp \
   crypto/sha512.h \
   crypto/siphash.cpp \
-  crypto/siphash.h
+  crypto/siphash.h \
+  crypto/yespower/sha256.c \
+  crypto/yespower/yespower-opt.c \
+  crypto/yespower/yespower.c
 
 if USE_ASM
 crypto_libbitcoin_crypto_base_a_SOURCES += crypto/sha256_sse4.cpp
