Change icons, change ports, add logo, Add New Checkpointdata.
Change icons, change ports, add logo, Add New Checkpointdata.

--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -210,7 +210,8 @@ RES_ICONS = \
   qt/res/icons/tx_input.png \
   qt/res/icons/tx_output.png \
   qt/res/icons/tx_mined.png \
-  qt/res/icons/warning.png
+  qt/res/icons/warning.png \
+  qt/res/icons/logo.png
 
 BITCOIN_QT_BASE_CPP = \
   qt/bantablemodel.cpp \
@@ -310,7 +311,7 @@ bitweb_qt_cppflags = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INCLUDES) \
   $(QT_INCLUDES) $(QR_CFLAGS)
 bitweb_qt_cxxflags = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
-bitcoin_qt_sources = qt/main.cpp
+bitweb_qt_sources = qt/main.cpp
 if TARGET_WINDOWS
   bitweb_qt_sources += $(BITCOIN_RC)
 endif
