--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -28,7 +28,7 @@ packages:
 - "python-setuptools"
 - "fonts-tuffy"
 remotes:
-- "url": "https://github.com/SACSaveCoin/BTE.git"
+- "url": "https://github.com/bitweb-project/bitweb.git"
   "dir": "bitweb"
 files:
 - "MacOSX10.11.sdk.tar.gz"
